--- a/client/app/provider/directives/provider-lookup-result.html
+++ b/client/app/provider/directives/provider-lookup-result.html
@@ -1,11 +1,11 @@
 <div id="provider_lookup_result">
     <div class="row">
-        <div class="col-md-6" ng-if="ProviderLookupResultVm.isEmptyResult()">
+        <div class="col-md-6" ng-if="providerLookupResultVm.isEmptyResult()">
             <div class="alert alert-danger">Sorry, no results found.</div>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-6" ng-if="!ProviderLookupResultVm.isEmptyResult()">
+        <div class="col-md-6" ng-if="!providerLookupResultVm.isEmptyResult()">
             <div class="panel panel-darkblue">
                 <div class="ibox-title modified panel-heading">
                     <h2>Results</h2>
@@ -14,35 +14,35 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-6" ng-if="!ProviderLookupResultVm.isEmptyResult()">
+        <div class="col-md-6" ng-if="!providerLookupResultVm.isEmptyResult()">
             <div class="text-center">
-                <pagination total-items="ProviderLookupResultVm.pagination.totalItems"
-                            items-per-page="ProviderLookupResultVm.pagination.itemsPerPage"
-                            ng-model="ProviderLookupResultVm.pagination.currentPage"
-                            ng-change="ProviderLookupResultVm.loadPage()"
-                            max-size="ProviderLookupResultVm.pagination.maxSize"
+                <pagination total-items="providerLookupResultVm.pagination.totalItems"
+                            items-per-page="providerLookupResultVm.pagination.itemsPerPage"
+                            ng-model="providerLookupResultVm.pagination.currentPage"
+                            ng-change="providerLookupResultVm.loadPage()"
+                            max-size="providerLookupResultVm.pagination.maxSize"
                             class="pagination-sm"
                             boundary-links="true"></pagination>
             </div>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-6" ng-if="!ProviderLookupResultVm.isEmptyResult()">
+        <div class="col-md-6" ng-if="!providerLookupResultVm.isEmptyResult()">
             <div class="panel panel-default"
-                 ng-repeat="provider in ProviderLookupResultVm.providerLookupResult.providers">
+                 ng-repeat="provider in providerLookupResultVm.providerLookupResult.providers">
                 <div class="panel-heading">
                     <h3>{{provider | plsName}}&nbsp;<span>[NPI: {{provider.npi}}]</span></h3>
                     <button type="button" class="btn btn-xs btn-primary dark-green"
-                            ng-click="ProviderLookupResultVm.addProvider(provider.npi)"
-                            ng-disabled="ProviderLookupResultVm.isProviderAlreadyAdded(provider.npi)">
+                            ng-click="providerLookupResultVm.addProvider(provider.npi)"
+                            ng-disabled="providerLookupResultVm.isProviderAlreadyAdded(provider.npi)">
                         <i class="fa fa-plus">
                             <span class="sr-only">Add Provider</span>
                         </i>
                     </button>
-                    <div class="inline" ng-if="!ProviderLookupResultVm.isProviderAlreadyAdded(provider.npi)">&nbsp;Add
+                    <div class="inline" ng-if="!providerLookupResultVm.isProviderAlreadyAdded(provider.npi)">&nbsp;Add
                         this Provider.
                     </div>
-                    <div class="inline" ng-if="ProviderLookupResultVm.isProviderAlreadyAdded(provider.npi)">&nbsp;Provider
+                    <div class="inline" ng-if="providerLookupResultVm.isProviderAlreadyAdded(provider.npi)">&nbsp;Provider
                         already
                         added.
                     </div>
@@ -58,13 +58,13 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-6" ng-if="!ProviderLookupResultVm.isEmptyResult()">
+        <div class="col-md-6" ng-if="!providerLookupResultVm.isEmptyResult()">
             <div class="text-center">
-                <pagination total-items="ProviderLookupResultVm.pagination.totalItems"
-                            items-per-page="ProviderLookupResultVm.pagination.itemsPerPage"
-                            ng-model="ProviderLookupResultVm.pagination.currentPage"
-                            ng-change="ProviderLookupResultVm.loadPage()"
-                            max-size="ProviderLookupResultVm.pagination.maxSize"
+                <pagination total-items="providerLookupResultVm.pagination.totalItems"
+                            items-per-page="providerLookupResultVm.pagination.itemsPerPage"
+                            ng-model="providerLookupResultVm.pagination.currentPage"
+                            ng-change="providerLookupResultVm.loadPage()"
+                            max-size="providerLookupResultVm.pagination.maxSize"
                             class="pagination-sm"
                             boundary-links="true"></pagination>
             </div>
