--- a/client/app/core/directives/contentWrapper.html
+++ b/client/app/core/directives/contentWrapper.html
@@ -1,11 +1,11 @@
 <div class="row wrapper border-bottom white-bg page-heading" id="content_wrapper">
     <div class="col-sm-10">
-        <h1><span ng-bind="title"></span></h1>
-    </div>
-    <div class="col-sm-2">
-    </div>
+    <h1><span ng-bind="contentWrapperVm.title"></span></h1>
+</div>
+<div class="col-sm-2">
+</div>
 </div>
 
 <div class="wrapper wrapper-content animated fadeInRight">
-    <div ng-transclude></div>
+    <ng-transclude></ng-transclude>
 </div>
