--- a/client/app/medicalDocuments/directives/medicalDocumentUploadedDocuments.html
+++ b/client/app/medicalDocuments/directives/medicalDocumentUploadedDocuments.html
@@ -31,13 +31,13 @@
                             <span ng-bind="medicalDocument.description"></span>
                         </td>
                         <td>
-                            <button type="button" class="btn btn-success dark-green btn-xs"
+                            <button type="button" class="btn btn-success dark-green btn-xs btn-block"
                                     ng-click="uploadedDocumentVm.downloadFile(medicalDocument)">
-                                <span class="fa fa-download"></span><span class="hidden-xs"> Download</span>
+                                <span class="fa fa-download hidden-xs"></span>Download
                             </button>
-                            <button type="button" class="btn btn-danger btn-xs"
+                            <button type="button" class="btn btn-danger btn-xs btn-block"
                                     ng-click="uploadedDocumentVm.openDeleteMedicalDocumentModal(medicalDocument, 'sm')">
-                                <span class="fa fa-times"></span> Remove
+                                <span class="fa fa-times hidden-xs"></span> Remove
                             </button>
                         </td>
                     </tr>
