Remove unnecessary code in the document section of the ccda document section directive.
#7692 - As a patient, I can view my health information, based on the latest transformed JSON from IExHub

--- a/client/app/healthinformation/directives/ccdaDocumentSection.html
+++ b/client/app/healthinformation/directives/ccdaDocumentSection.html
@@ -7,25 +7,9 @@
                 </h5>
                 <div pp-ibox-tools></div>
             </div>
-            <div class="ibox-content testContent">
+            <div class="ibox-content">
                 <p>
-                    <!--<span ng-bind-html="ccdaDocumentSectionVm.section.content | trustAsHTML "></span>-->
-                    <span ng-bind-html="ccdaDocumentSectionVm.testContent | trustAsHTML "></span>
-
-                    <table>
-                        <tr>
-                            <th>Month</th>
-                            <th>Savings</th>
-                        </tr>
-                        <tr>
-                            <td>January</td>
-                            <td>$100</td>
-                        </tr>
-                        <tr>
-                            <td>February</td>
-                            <td>$80</td>
-                        </tr>
-                    </table>
+                    <span ng-bind-html="ccdaDocumentSectionVm.section.content | trustAsHTML "></span>
                 </p>
             </div>
         </div>
