--- a/client/app/healthinformation/directives/ccdaDocumentSection.html
+++ b/client/app/healthinformation/directives/ccdaDocumentSection.html
@@ -8,9 +8,9 @@
                 <div pp-ibox-tools></div>
             </div>
             <div class="ibox-content">
-                <p>
+                <div class="healthInfo">
                     <span ng-bind-html="ccdaDocumentSectionVm.section.content | trustAsHTML "></span>
-                </p>
+                </div>
             </div>
         </div>
     </div>
