changes to display address information from latest json
#7692 - As a patient, I can view my health information, based on the latest transformed JSON from IExHub

--- a/client/app/healthinformation/directives/ccdaDocument.html
+++ b/client/app/healthinformation/directives/ccdaDocument.html
@@ -36,8 +36,8 @@
                         </div>
                         <div>
                             <label for="patientAddress">Address: </label>
-                            <span ng-bind="ccdaDocumentVm.patient.contactInfo.address.addressLine" id="patientAddress"></span>
-                            <span ng-bind="ccdaDocumentVm.patient.contactInfo.address.city"></span>
+                            <span ng-bind="ccdaDocumentVm.address.addressLine" id="patientAddress"></span>
+                            <span ng-bind="ccdaDocumentVm.address.city"></span>
                         </div>
 
                     </div>
