To display multiple documents of the same patient
#7692 - As a patient, I can view my health information, based on the latest transformed JSON from IExHub

--- a/client/app/healthInformation/directives/ccdaDocument.html
+++ b/client/app/healthInformation/directives/ccdaDocument.html
@@ -6,10 +6,10 @@
                 <div class="row">
                     <div class="col-sm-12 m-t-xs">
                         <h3>
-                            <span ng-bind="ccdaDocumentVm.document.type"></span>
+                            <span ng-bind="ccdaDocumentVm.cdaDocument.type"></span>
                             <span class="m-b-none m-l-sm">
-                                Created on <span ng-bind="ccdaDocumentVm.document.date"></span> at
-                                <span ng-bind="ccdaDocumentVm.document.title"></span>
+                                Created on <span ng-bind="ccdaDocumentVm.cdaDocument.date"></span> at
+                                <span ng-bind="ccdaDocumentVm.cdaDocument.title"></span>
                             </span>
                         </h3>
                     </div>
