Fix the display issue in the health information providers not displaying properly.
#7692 - As a patient, I can view my health information, based on the latest transformed JSON from IExHub

--- a/client/app/healthInformation/directives/ccdaDocument.html
+++ b/client/app/healthInformation/directives/ccdaDocument.html
@@ -44,9 +44,10 @@
                     <div class="col-sm-6">
                         <div>
                             <label for="author">Provider: </label>
-                            <div ng-repeat="author in ccdaDocumentVm.authors">
-                                <span ng-bind="author.providerName" id="author"></span>,
-                            </div>
+                            <span ng-repeat="author in ccdaDocumentVm.authors">
+                                <span ng-bind="author.providerName" id="author"></span>
+                                <span ng-if="!$last">,</span>
+                            </span>
 
                         </div>
                         <div>
