Fix the tooltip bugs.
#7692 - As a patient, I can view my health information, based on the latest transformed JSON from IExHub

--- a/client/app/consent/controllers/consentCreateEdit.html
+++ b/client/app/consent/controllers/consentCreateEdit.html
@@ -1,5 +1,5 @@
 
-<pp-content-wrapper title="Create Consent">
+<pp-content-wrapper contenttitle="Create Consent">
         <pp-consent-create
                 providers="consentCreateEditVm.providers"
                 purposeofuse="consentCreateEditVm.purposeOfUse"
