--- a/client/app/consent/controllers/consentSignRevoke.html
+++ b/client/app/consent/controllers/consentSignRevoke.html
@@ -1,4 +1,4 @@
-<pp-content-wrapper title="Sign Revoke Consent">
+<pp-content-wrapper contenttitle="Sign Revoke Consent">
 
     <div ng-bind-html="consentSignRevokeVm.javascriptCode |trustAsHTML" style="height: 600px"/>
 
