--- a/client/app/medicalDocuments/controllers/medicalDocument.html
+++ b/client/app/medicalDocuments/controllers/medicalDocument.html
@@ -1,4 +1,4 @@
-<pp-content-wrapper title="Upload Medical Documents">
+<pp-content-wrapper contenttitle="Upload Medical Documents">
     <div class="row">
         <pp-medical-documents-upload></pp-medical-documents-upload>
         <pp-uploaded-documents medicaldocumentslist="medicalDocumentsListVm.medicalDocumentsList"></pp-uploaded-documents>
