--- a/client/app/consent/controllers/consentRevoke.html
+++ b/client/app/consent/controllers/consentRevoke.html
@@ -1,3 +1,3 @@
-<pp-content-wrapper title="Revoke Consent">
+<pp-content-wrapper contenttitle="Revoke Consent">
     <pp-consent-revoke></pp-consent-revoke>
 </pp-content-wrapper>
