--- a/client/app/consent/controllers/consentTryMyPolicy.html
+++ b/client/app/consent/controllers/consentTryMyPolicy.html
@@ -1,3 +1,3 @@
-<pp-content-wrapper title="Try My Policy">
+<pp-content-wrapper contenttitle="Try My Policy">
     <div>This page is still under development.</div>
 </pp-content-wrapper>
