--- a/client/app/medicalDocuments/controllers/medicalDocumentInfo.html
+++ b/client/app/medicalDocuments/controllers/medicalDocumentInfo.html
@@ -1,4 +1,4 @@
-<pp-content-wrapper title="Manage My Medical Information">
+<pp-content-wrapper contenttitle="Manage My Medical Information">
     <div class="row">
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
