--- a/client/app/provider/controllers/provider-list.html
+++ b/client/app/provider/controllers/provider-list.html
@@ -1,4 +1,4 @@
-<pp-content-wrapper title="List Providers">
+<pp-content-wrapper contenttitle="List Providers">
 
     <div class="row">
         <div class="col-sm-12">
