--- a/client/app/healthInformation/directives/ccdaDocument.html
+++ b/client/app/healthInformation/directives/ccdaDocument.html
@@ -65,6 +65,15 @@
                     </div>
                 </div>
 
+                <div ng-if="ccdaDocumentVm.sections.length === 0">
+                    <div class="alert alert-warning alert-dismissible" role="alert">
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <strong> Document does not contain sections.</strong>
+                    </div>
+                </div>
+
                 <div ng-repeat="section in ccdaDocumentVm.sections">
                     <pp-ccda-document-section section="section" ></pp-ccda-document-section>
                 </div>
