Update the manage consent option modal to show try my policy modal page where the user will choose the document to apply segmentation.
#7692 - As a patient, I can view my health information, based on the latest transformed JSON from IExHub

--- a/client/app/consent/directives/consentListManageOptionsModalError.html
+++ b/client/app/consent/directives/consentListManageOptionsModalError.html
@@ -1,6 +1,6 @@
 <div class="inmodal">
     <div class="modal-header">
-        <button type="button" class="close" ng-click="ManageConsentModalVm.cancel()" aria-hidden="true">X</button>
+        <button type="button" class="close" ng-click="manageConsentModalVm.cancel()" aria-hidden="true">X</button>
         <h4 class="modal-title">Consent Options</h4>
     </div>
     <div class="modal-body">
