--- a/client/app/consent/directives/consentListManageOptionsModalRevoked.html
+++ b/client/app/consent/directives/consentListManageOptionsModalRevoked.html
@@ -1,6 +1,6 @@
 <div class="inmodal">
     <div class="modal-header">
-        <button type="button" class="close" ng-click="ManageConsentModalVm.cancel()" aria-hidden="true">X</button>
+        <button type="button" class="close" ng-click="manageConsentModalVm.cancel()" aria-hidden="true">X</button>
         <h4 class="modal-title">Consent Options</h4>
     </div>
     <div class="modal-body">
