--- a/client/app/consent/directives/consentListManageOptionsModalSigned.html
+++ b/client/app/consent/directives/consentListManageOptionsModalSigned.html
@@ -1,6 +1,6 @@
 <div class="inmodal">
     <div class="modal-header">
-        <button type="button" class="close" ng-click="ManageConsentModalVm.cancel()" aria-hidden="true">X</button>
+        <button type="button" class="close" ng-click="manageConsentModalVm.cancel()" aria-hidden="true">X</button>
         <h4 class="modal-title">Consent Options</h4>
     </div>
     <div class="modal-body">
@@ -9,7 +9,7 @@
             <a href="" class="list-group-item"><h4><i class="fa fa-folder-open-o fa-lg m-r-sm"></i>View Signed Consent</h4></a>
             <a href="" class="list-group-item"><h4><i class="fa fa-file-text-o fa-lg m-r-sm"></i>Export to XACML</button></h4></a>
             <a href="" class="list-group-item" ui-sref="fe.consent.trymypolicy"><h4><i class="fa fa-gear fa-lg m-r-sm"></i>Try My Consent Settings against My Medical Record before Sharing</h4></a>
-            <a href="" class="list-group-item" ng-click="ManageConsentModalVm.revoke()"><h4><i class="fa fa-times fa-lg m-r-sm"></i>Withdrawal</h4></a>
+            <a href="" class="list-group-item" ng-click="manageConsentModalVm.revoke()"><h4><i class="fa fa-times fa-lg m-r-sm"></i>Withdrawal</h4></a>
         </div>
     </div>
 </div>
