--- a/client/app/consent/directives/consentListManageOptionsModalSaved.html
+++ b/client/app/consent/directives/consentListManageOptionsModalSaved.html
@@ -1,39 +1,41 @@
 <div class="inmodal">
-    <div class="modal-header">
-        <button type="button" class="close" ng-click="manageConsentModalVm.cancel()" aria-hidden="true">X</button>
-        <h4 class="modal-title" ng-if="manageConsentModalVm.state === 'manageConcent'" >Consent Options</h4>
-        <h4 class="modal-title" ng-if="manageConsentModalVm.state === 'tryMyPolicy'" >Apply My Record</h4>
-    </div>
-    <div class="modal-body">
-        <div ng-if="manageConsentModalVm.state === 'manageConcent'">
-            <h3>I want to:</h3>
-            <div class="list-group">
-                <a href="#" class="list-group-item" ng-click="manageConsentModalVm.edit()"><h4><i class="fa fa-edit fa-lg m-r-sm"></i>Edit This Consent</h4></a>
-                <a href="#" class="list-group-item" ng-click="manageConsentModalVm.preview()" ><h4><i class="fa fa-search fa-lg m-r-sm"></i>Preview This Consent</h4></a>
-                <a href="#" class="list-group-item" ng-click="manageConsentModalVm.signConsent()"><h4><i class="fa fa-mail-forward fa-lg m-r-sm"></i>Submit My Consent for Signing</h4></a>
-                <a href="#" class="list-group-item" ng-click="manageConsentModalVm.setState('tryMyPolicy')"><h4><i class="fa fa-gear fa-lg m-r-sm"></i>Try My Consent Settings against My Medical Record before Sharing</h4></a>
-                <a href="#" class="list-group-item" ng-click="manageConsentModalVm.setState('delete')"><h4><i class="fa fa-trash-o fa-lg m-r-sm"></i>Delete This Consent</h4></a>
+    <form name="consentOptionsForm">
+        <div class="modal-header">
+            <button type="button" class="close" ng-click="manageConsentModalVm.cancel()" aria-hidden="true">X</button>
+            <h4 class="modal-title" ng-if="manageConsentModalVm.state === 'manageConcent'" >Consent Options</h4>
+            <h4 class="modal-title" ng-if="manageConsentModalVm.state === 'tryMyPolicy'" >Apply My Record</h4>
+        </div>
+        <div class="modal-body">
+            <div ng-if="manageConsentModalVm.state === 'manageConcent'">
+                <h3>I want to:</h3>
+                <div class="list-group">
+                    <a href="#" class="list-group-item" ng-click="manageConsentModalVm.edit()"><h4><i class="fa fa-edit fa-lg m-r-sm"></i>Edit This Consent</h4></a>
+                    <a href="#" class="list-group-item" ng-click="manageConsentModalVm.preview()" ><h4><i class="fa fa-search fa-lg m-r-sm"></i>Preview This Consent</h4></a>
+                    <a href="#" class="list-group-item" ng-click="manageConsentModalVm.signConsent()"><h4><i class="fa fa-mail-forward fa-lg m-r-sm"></i>Submit My Consent for Signing</h4></a>
+                    <a href="#" class="list-group-item" ng-click="manageConsentModalVm.setState('tryMyPolicy')"><h4><i class="fa fa-gear fa-lg m-r-sm"></i>Try My Consent Settings against My Medical Record before Sharing</h4></a>
+                    <a href="#" class="list-group-item" ng-click="manageConsentModalVm.setState('delete')"><h4><i class="fa fa-trash-o fa-lg m-r-sm"></i>Delete This Consent</h4></a>
+                </div>
+            </div>
+
+            <div ng-if="manageConsentModalVm.state === 'tryMyPolicy'">
+
+            </div>
+
+            <div ng-if="manageConsentModalVm.state === 'delete'">
+                <h3 class="text-center">Are you sure you want to delete this consent?</h3>
             </div>
         </div>
-        <div ng-if="manageConsentModalVm.state === 'tryMyPolicy'">
-            <h5> I am about to apply my policy...</h5>
-        </div>
+        <div class="modal-footer" >
+            <div ng-if="manageConsentModalVm.state === 'delete'">
+                <button type="button" class="btn btn-white m-r-xs" ng-click="manageConsentModalVm.setState('manageConcent')">Cancel</button>
+                <button type="button" class="btn btn-primary" ng-click="manageConsentModalVm.deleteConsent()">Delete</button>
 
-        <div ng-if="manageConsentModalVm.state === 'delete'">
-            <h3 class="text-center">Are you sure you want to delete this consent?</h3>
-        </div>
-    </div>
-    <div class="modal-footer" >
-        <div ng-if="manageConsentModalVm.state === 'delete'">
-            <button type="button" class="btn btn-white m-r-xs" ng-click="manageConsentModalVm.setState('manageConcent')">Cancel</button>
-            <button type="button" class="btn btn-primary" ng-click="manageConsentModalVm.deleteConsent()">Delete</button>
+            </div>
 
+            <div ng-if="manageConsentModalVm.state === 'tryMyPolicy'">
+                <button type="button" class="btn btn-white m-r-xs" ng-click="manageConsentModalVm.setState('manageConcent')">Back to Consent Options</button>
+                <button type="button" class="btn btn-primary" ng-click="manageConsentModalVm.applyTryMyPolicy()">Apply</button>
+            </div>
         </div>
-
-        <div ng-if="manageConsentModalVm.state === 'tryMyPolicy'">
-            <button type="button" class="btn btn-white m-r-xs" ng-click="manageConsentModalVm.setState('manageConcent')">Back to Consent Options</button>
-            <button type="button" class="btn btn-primary" ng-click="manageConsentModalVm.applyTryMyPolicy()">Apply</button>
-        </div>
-    </div>
-
+    </form>
 </div>
