--- a/client/app/consent/directives/consentListManageOptionsModalSaved.html
+++ b/client/app/consent/directives/consentListManageOptionsModalSaved.html
@@ -18,7 +18,22 @@
             </div>
 
             <div ng-if="manageConsentModalVm.state === 'tryMyPolicy'">
-
+                <div class="form-horizontal">
+                    <div class="form-group m-b-xs"><label class="col-sm-3 control-label">Document</label>
+                        <div class="col-sm-9"><select class="form-control m-b" name="account">
+                            <option>Document 1</option>
+                            <option>Document 2</option>
+                        </select>
+                        </div>
+                    </div>
+                    <div class="form-group"><label class="col-sm-3 control-label">Purpose of Use</label>
+                        <div class="col-sm-9"><select class="form-control m-b" name="account">
+                            <option>Purpose of Use 1</option>
+                            <option>Purpose of Use 2</option>
+                        </select>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div ng-if="manageConsentModalVm.state === 'delete'">
