--- a/client/app/consent/directives/consentListManageOptionsModalSigned.html
+++ b/client/app/consent/directives/consentListManageOptionsModalSigned.html
@@ -1,15 +1,45 @@
 <div class="inmodal">
     <div class="modal-header">
         <button type="button" class="close" ng-click="manageConsentModalVm.cancel()" aria-hidden="true">X</button>
-        <h4 class="modal-title">Consent Options</h4>
+        <h4 class="modal-title" ng-if="manageConsentModalVm.option === 'manageConcent'" >Consent Options</h4>
+        <h4 class="modal-title" ng-if="manageConsentModalVm.option === 'tryMyPolicy'" >Apply My Record</h4>
     </div>
     <div class="modal-body">
-        <h3>I want to:</h3>
-        <div class="list-group">
-            <a href="" class="list-group-item"><h4><i class="fa fa-folder-open-o fa-lg m-r-sm"></i>View Signed Consent</h4></a>
-            <a href="" class="list-group-item"><h4><i class="fa fa-file-text-o fa-lg m-r-sm"></i>Export to XACML</button></h4></a>
-            <a href="" class="list-group-item" ui-sref="fe.consent.trymypolicy"><h4><i class="fa fa-gear fa-lg m-r-sm"></i>Try My Consent Settings against My Medical Record before Sharing</h4></a>
-            <a href="" class="list-group-item" ng-click="manageConsentModalVm.revoke()"><h4><i class="fa fa-times fa-lg m-r-sm"></i>Withdrawal</h4></a>
+        <div ng-if="manageConsentModalVm.option === 'manageConcent'">
+            <h3>I want to:</h3>
+            <div class="list-group" >
+                <a href="" class="list-group-item"><h4><i class="fa fa-folder-open-o fa-lg m-r-sm"></i>View Signed Consent</h4></a>
+                <a href="" class="list-group-item"><h4><i class="fa fa-file-text-o fa-lg m-r-sm"></i>Export to XACML</button></h4></a>
+                <a href="" class="list-group-item" ng-click="manageConsentModalVm.setOption('tryMyPolicy')"><h4><i class="fa fa-gear fa-lg m-r-sm"></i>Try My Consent Settings against My Medical Record before Sharing</h4></a>
+                <a href="" class="list-group-item" ng-click="manageConsentModalVm.revoke()"><h4><i class="fa fa-times fa-lg m-r-sm"></i>Withdrawal</h4></a>
+            </div>
+        </div>
+
+        <div ng-if="manageConsentModalVm.option === 'tryMyPolicy'">
+            <div class="form-horizontal">
+                <div class="form-group m-b-xs"><label class="col-sm-3 control-label">Document</label>
+                    <div class="col-sm-9"><select class="form-control m-b" name="account">
+                        <option>Document 1</option>
+                        <option>Document 2</option>
+                    </select>
+                    </div>
+                </div>
+                <div class="form-group"><label class="col-sm-3 control-label">Purpose of Use</label>
+                    <div class="col-sm-9"><select class="form-control m-b" name="account">
+                        <option>Purpose of Use 1</option>
+                        <option>Purpose of Use 2</option>
+                    </select>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+
+    <div class="modal-footer" >
+        <div ng-if="manageConsentModalVm.option === 'tryMyPolicy'">
+            <button type="button" class="btn btn-white m-r-xs" ng-click="manageConsentModalVm.setOption('manageConcent')">Back to Consent Options</button>
+            <button type="button" class="btn btn-primary" ng-click="manageConsentModalVm.applyTryMyPolicy()">Apply</button>
+        </div>
+    </div>
+
 </div>
