--- a/client/app/consent/directives/consentListManageOptionsModalSigned.html
+++ b/client/app/consent/directives/consentListManageOptionsModalSigned.html
@@ -18,10 +18,10 @@
         <div ng-if="manageConsentModalVm.option === 'tryMyPolicy'">
             <div class="form-horizontal">
                 <div class="form-group m-b-xs"><label class="col-sm-3 control-label">Document</label>
-                    <div class="col-sm-9"><select class="form-control m-b" name="account">
-                        <option>Document 1</option>
-                        <option>Document 2</option>
-                    </select>
+                    <div class="col-sm-9">
+                        <select class="form-control m-b" name="account" ng-model="manageConsentModalVm.selMedicalDocumentId">
+                            <option ng-repeat="document in manageConsentModalVm.medicalDocuments" value="{{document.id}}">{{document.filename |fileName}}</option>
+                        </select>
                     </div>
                 </div>
                 <div class="form-group"><label class="col-sm-3 control-label">Purpose of Use</label>
