Update the grunt file with new URL and port fo the pcm API. Implemented consent try my policy dropdown to  create the dropdown in the consent try my policy modal.
#7497 - As a patient I can validate data segmentation from a patient point of view.

--- a/client/app/consent/directives/consentListManageOptionsModalSaved.html
+++ b/client/app/consent/directives/consentListManageOptionsModalSaved.html
@@ -28,8 +28,8 @@
                     </div>
                     <div class="form-group"><label class="col-sm-3 control-label">Purpose of Use</label>
                         <div class="col-sm-9">
-                            <select class="form-control m-b" name="account" ng-model="manageConsentModalVm.purposeOfUse" >
-                                <option ng-repeat="purposeOfUse in manageConsentModalVm.shareForPurposeOfUseCodes" value="{{purposeOfUse}}">{{purposeOfUse}}</option>
+                            <select class="form-control m-b" name="account" ng-model="manageConsentModalVm.purposeOfUseCode" >
+                                <option ng-repeat="purposeOfUse in manageConsentModalVm.shareForPurposeOfUse" value="{{purposeOfUse.code}}">{{purposeOfUse.displayName}}</option>
                             </select>
                         </div>
                     </div>
