--- a/client/app/consent/directives/consentListManageOptionsModalError.html
+++ b/client/app/consent/directives/consentListManageOptionsModalError.html
@@ -1,7 +1,6 @@
 <div class="inmodal">
     <div class="modal-header">
-        <button type="button" class="close" ng-click="manageConsentModalVm.cancel()" aria-hidden="true">X</button>
-        <h4 class="modal-title">Consent Options</h4>
+        <pp-consent-modal-header option="manageConsentModalVm.option" cancel="manageConsentModalVm.cancel()"></pp-consent-modal-header>
     </div>
     <div class="modal-body">
         <div class="alert alert-danger"><strong>ERROR:</strong> Invalid consent state. Please contact to system administrator.</div>
