--- a/client/app/consent/directives/consentListManageOptionsModalRevoked.html
+++ b/client/app/consent/directives/consentListManageOptionsModalRevoked.html
@@ -1,8 +1,6 @@
 <div class="inmodal">
     <div class="modal-header">
-        <button type="button" class="close" ng-click="manageConsentModalVm.cancel()" aria-hidden="true">X</button>
-        <h4 class="modal-title" ng-if="manageConsentModalVm.option === 'manageConcent'" >Consent Options</h4>
-        <h4 class="modal-title" ng-if="manageConsentModalVm.option === 'tryMyPolicy'" >Apply My Record</h4>
+        <pp-consent-modal-header option="manageConsentModalVm.option" cancel="manageConsentModalVm.cancel()"></pp-consent-modal-header>
     </div>
     <div class="modal-body">
         <div ng-if="manageConsentModalVm.option === 'manageConcent'">
@@ -14,26 +12,13 @@
                 <a href="#" class="list-group-item"><h4><i class="fa fa-folder-open fa-lg m-r-sm"></i>View Signed Revocation</h4></a>
             </div>
         </div>
-
-
-        <div ng-if="manageConsentModalVm.option === 'tryMyPolicy'">
-            <div class="form-horizontal">
-                <div class="form-group m-b-xs"><label class="col-sm-3 control-label">Document</label>
-                    <div class="col-sm-9">
-                        <select class="form-control m-b" name="account" ng-model="manageConsentModalVm.selMedicalDocumentId">
-                            <option ng-repeat="document in manageConsentModalVm.medicalDocuments" value="{{document.id}}">{{document.filename |fileName}}</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="form-group"><label class="col-sm-3 control-label">Purpose of Use</label>
-                    <div class="col-sm-9">
-                        <select class="form-control m-b" name="account" ng-model="manageConsentModalVm.purposeOfUseCode" >
-                            <option ng-repeat="purposeOfUse in manageConsentModalVm.shareForPurposeOfUse" value="{{purposeOfUse.code}}">{{purposeOfUse.displayName}}</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <pp-consent-try-policy-dropdown
+                documentid="manageConsentModalVm.selMedicalDocumentId"
+                option="manageConsentModalVm.option"
+                shareforpurposeofuse="manageConsentModalVm.shareForPurposeOfUse"
+                purposeofusecode="manageConsentModalVm.purposeOfUseCode"
+                medicaldocuments="manageConsentModalVm.medicalDocuments" >
+        </pp-consent-try-policy-dropdown>
     </div>
 
     <div class="modal-footer" >
