--- a/client/app/consent/directives/consentListManageOptionsModalSaved.html
+++ b/client/app/consent/directives/consentListManageOptionsModalSaved.html
@@ -1,9 +1,7 @@
 <div class="inmodal">
     <form name="consentOptionsForm">
         <div class="modal-header">
-            <button type="button" class="close" ng-click="manageConsentModalVm.cancel()" aria-hidden="true">X</button>
-            <h4 class="modal-title" ng-if="manageConsentModalVm.option === 'manageConcent'" >Consent Options</h4>
-            <h4 class="modal-title" ng-if="manageConsentModalVm.option === 'tryMyPolicy'" >Apply My Record</h4>
+            <pp-consent-modal-header option="manageConsentModalVm.option" cancel="manageConsentModalVm.cancel()"></pp-consent-modal-header>
         </div>
         <div class="modal-body">
             <div ng-if="manageConsentModalVm.option === 'manageConcent'">
@@ -17,40 +15,21 @@
                 </div>
             </div>
 
-            <div ng-if="manageConsentModalVm.option === 'tryMyPolicy'">
-                <div class="form-horizontal">
-                    <div class="form-group m-b-xs"><label class="col-sm-3 control-label">Document</label>
-                        <div class="col-sm-9">
-                            <select class="form-control m-b" name="account" ng-model="manageConsentModalVm.selMedicalDocumentId">
-                                <option ng-repeat="document in manageConsentModalVm.medicalDocuments" value="{{document.id}}">{{document.filename  |fileName}}</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="form-group"><label class="col-sm-3 control-label">Purpose of Use</label>
-                        <div class="col-sm-9">
-                            <select class="form-control m-b" name="account" ng-model="manageConsentModalVm.purposeOfUseCode" >
-                                <option ng-repeat="purposeOfUse in manageConsentModalVm.shareForPurposeOfUse" value="{{purposeOfUse.code}}">{{purposeOfUse.displayName}}</option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <pp-consent-try-policy-dropdown
+                    documentid="manageConsentModalVm.selMedicalDocumentId"
+                    option="manageConsentModalVm.option"
+                    shareforpurposeofuse="manageConsentModalVm.shareForPurposeOfUse"
+                    purposeofusecode="manageConsentModalVm.purposeOfUseCode"
+                    medicaldocuments="manageConsentModalVm.medicalDocuments" >
+            </pp-consent-try-policy-dropdown>
 
             <div ng-if="manageConsentModalVm.option === 'delete'">
                 <h3 class="text-center">Are you sure you want to delete this consent?</h3>
             </div>
         </div>
         <div class="modal-footer" >
-            <div ng-if="manageConsentModalVm.option === 'delete'">
-                <button type="button" class="btn btn-white m-r-xs" ng-click="manageConsentModalVm.setOption('manageConcent')">Cancel</button>
-                <button type="button" class="btn btn-primary" ng-click="manageConsentModalVm.deleteConsent()">Delete</button>
-
-            </div>
-
-            <div ng-if="manageConsentModalVm.option === 'tryMyPolicy'">
-                <button type="button" class="btn btn-white m-r-xs" ng-click="manageConsentModalVm.setOption('manageConcent')">Back to Consent Options</button>
-                <button type="button" class="btn btn-primary" ng-click="manageConsentModalVm.applyTryMyPolicy()">Apply</button>
-            </div>
+            <pp-consent-modal-footer option="manageConsentModalVm.option" setoption="manageConsentModalVm.setOption(option)"  applytrymypolicy="manageConsentModalVm.applyTryMyPolicy()">
+            </pp-consent-modal-footer>
         </div>
     </form>
 </div>
