Fix the consent option modal window back and delete button bug
#7497 - As a developer, I can validate data segmentation from a patient point of view [Frontend]

--- a/client/app/consent/directives/consentListManageOptionsModalRevoked.html
+++ b/client/app/consent/directives/consentListManageOptionsModalRevoked.html
@@ -22,9 +22,11 @@
     </div>
 
     <div class="modal-footer" >
-        <div ng-if="manageConsentModalVm.option === 'tryMyPolicy'">
-            <button type="button" class="btn btn-white m-r-xs" ng-click="manageConsentModalVm.setOption('manageConcent')">Back to Consent Options</button>
-            <button type="button" class="btn btn-primary" ng-click="manageConsentModalVm.applyTryMyPolicy()">Apply</button>
-        </div>
+        <pp-consent-modal-footer
+                option="manageConsentModalVm.option"
+                setoption="manageConsentModalVm.setOption(option)"
+                applytrymypolicy="manageConsentModalVm.applyTryMyPolicy()"
+                deleteconsent="manageConsentModalVm.deleteConsent()">
+        </pp-consent-modal-footer>
     </div>
 </div>
