--- a/client/app/consent/directives/consentListManageOptionsModalSigned.html
+++ b/client/app/consent/directives/consentListManageOptionsModalSigned.html
@@ -22,7 +22,11 @@
     </div>
 
     <div class="modal-footer" >
-        <pp-consent-modal-footer option="manageConsentModalVm.option" setoption="manageConsentModalVm.setOption(option)"  applytrymypolicy="manageConsentModalVm.applyTryMyPolicy()">
-        </pp-consent-modal-footer>
+        <pp-consent-modal-footer
+            option="manageConsentModalVm.option"
+            setoption="manageConsentModalVm.setOption(option)"
+            applytrymypolicy="manageConsentModalVm.applyTryMyPolicy()"
+            deleteconsent="manageConsentModalVm.deleteConsent()">
+    </pp-consent-modal-footer>
     </div>
 </div>
