--- a/client/app/consent/directives/consentModalFooter.html
+++ b/client/app/consent/directives/consentModalFooter.html
@@ -1,6 +1,6 @@
-<div ng-if="manageConsentModalVm.option === 'delete'">
-    <button type="button" class="btn btn-white m-r-xs" ng-click="manageConsentModalVm.setOption('manageConcent')">Cancel</button>
-    <button type="button" class="btn btn-primary" ng-click="manageConsentModalVm.deleteConsent()">Delete</button>
+<div ng-if="consentModalFooterVm.option === 'delete'">
+    <button type="button" class="btn btn-white m-r-xs" ng-click="consentModalFooterVm.setoption({option: 'manageConcent'})">Cancel</button>
+    <button type="button" class="btn btn-primary" ng-click="consentModalFooterVm.deleteconsent()">Delete</button>
 
 </div>
 <div ng-if="consentModalFooterVm.option === 'tryMyPolicy'">
