--- a/client/app/consent/directives/consentCard.html
+++ b/client/app/consent/directives/consentCard.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-lg-12 relative">
-        <div class="ibox panel panel-success float-e-margins">
-            <div class="ibox-title navy-blue right-padding30" ng-click="consentCardVm.toggleCollapse()">
+        <div class="ibox panel panel-navbar-blueGray float-e-margins">
+            <div class="ibox-title modified panel-heading right-padding30" ng-click="consentCardVm.toggleCollapse()">
                 <div class="chevron_absolute">
                     <div pp-ibox-tools pp-collapsed="consentCardVm.collapsed" pp-chevron-prevent-default="true"></div>
                 </div>
@@ -35,41 +35,43 @@
             </div>
 
             <div class="ibox-content modified">
-                <div class="btn-grey pp-block-text-bar pp-block-text-bar_sm pp-block-text-bar_default">
-                    <span>
-                        Consent State: <span class="bold" ng-bind="consentCardVm.consentState('') | uppercase"/>
-                    </span>
-                </div>
+                <!--<div class="btn-grey pp-block-text-bar pp-block-text-bar_sm pp-block-text-bar_default">-->
+                    <!--<span>-->
+                        <!--Consent State: <span class="bold" ng-bind="consentCardVm.consentState('') | uppercase"/>-->
+                    <!--</span>-->
+                <!--</div>-->
 
                 <div class="row">
                     <div class="col-md-6 m-b">
                         <div ng-if="consentCardVm.isShareAll()">
-                            <h2 class="border-bottom-blue">Sharing all medical information:</h2>
+                            <h3 class="border-bottom-blue"><span class="m-r-xs"><i class="fa fa-eye"></i></span>Sharing all medical information:</h3>
                             All my medical information can be shared.
                         </div>
                         <div ng-if="!consentCardVm.isShareAll()">
-                            <h2 class="border-bottom-red">Medical Information NOT disclosed:</h2>
+                            <h3 class="border-bottom-red"><span class="m-r-xs"><i class="fa fa-eye-slash"></i></span>Medical Information NOT disclosed:</h3>
 
                             <p><span ng-bind="consentCardVm.notDisclosedItems()"/></p>
                         </div>
                     </div>
                     <div class="col-md-6 m-b">
-                        <h2 class="border-bottom-blue">Share for following purposes:</h2>
+                        <h3 class="border-bottom-blue"><span class="m-r-xs"><i class="fa fa-eye"></i></span>Share for following purposes:</h3>
 
                         <p><span ng-bind="consentCardVm.purposeOfUseItems()"/></p>
                     </div>
                 </div>
             </div>
             <div class="panel-footer">
-                <div class="inline">
-                <div class="left-padding40 " ng-class="{'statusIcon_saved': consentCardVm.consentState('Saved'),'statusIcon_signed': consentCardVm.consentState('Signed'),'statusIcon_revoked': consentCardVm.consentState('Revoked')}">
-                Panel Footer test
-                    <span>
-                        <button class="btn btn-primary btn-sm dark-green" ng-click="consentCardVm.openManageConsentModal()">Manage
-                            Consent
-                        </button>
-                    </span>
-                </div>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div class="left-padding25" ng-class="{'statusIcon_saved': consentCardVm.consentState('Saved'),'statusIcon_signed': consentCardVm.consentState('Signed'),'statusIcon_revoked': consentCardVm.consentState('Revoked')}">
+                            <span> Consent State: <span class="bold" ng-bind="consentCardVm.consentState('') | uppercase"/></span>
+                            <span class="pull-right">
+                                <button class="btn btn-primary btn-xs dark-green" ng-click="consentCardVm.openManageConsentModal()">Manage
+                                    Consent
+                                </button>
+                            </span>
+                        </div>
+                    </div>
                 </div>
             </div>
 
